--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="js.js" defer></script>
     <title>SWAPI</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="search-container">
-        <div class="search" id="search-list">
-            <h3 class="text-header">Search for Star Wars character </h3>
-            <input type="text" class="form" placeholder="search something" id="search-box">
-            <button id="submit">Search</button>
-        </div>
+      <div class="search" id="search-list">
+        <h3 class="text-header">Search for Star Wars character</h3>
+        <input
+          type="text"
+          class="form"
+          placeholder="search something"
+          id="search-box"
+        />
+        <button id="submit">Search</button>
+      </div>
     </div>
     <div class="result-container" id="result">
-        <p id="demo"></p>
+      <p id="demo"></p>
     </div>
-
-</body>
+  </body>
 </html>
