variable chenged from id "demo" to "characterName"

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="result-container" id="result">
-      <p id="demo"></p>
+      <p id="characterName"></p>
     </div>
   </body>
 </html>
