new tags for variables

--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
         <input
           type="text"
           class="form"
-          placeholder="search something"
+          placeholder="Look up for a Star Wars character..."
           id="search-box"
         />
-        <button id="submit">Search</button>
+        <button id="submit" value="Submit">Search</button>
       </div>
     </div>
     <div class="result-container" id="result">
       <p id="characterName"></p>
+      <p id="homeworld"></p>
+      <p id="movies"></p>
+      <p id="species"></p>
     </div>
   </body>
 </html>
