--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           placeholder="Look up for a Star Wars character..."
           id="search-box"
         />
-        <button id="submit" value="Submit">Search</button>
+        <button id="submit" type="submit" value="Submit">Search</button>
       </div>
     </div>
     <div class="result-container" id="result">
