--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
       </div>
     </div>
     <div class="result-container" id="result">
+      <h3>Name</h3>
       <p id="characterName"></p>
+      <h3>Homeworld</h3>
       <p id="homeworld"></p>
+      <h3>Movies</h3>
       <p id="movies"></p>
+      <h3>Species</h3>
       <p id="species"></p>
     </div>
   </body>
