--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>SWAPI</title>
   </head>
   <body>
+    <header>Get SWAPI</header>
     <div class="search-container">
       <div class="search" id="search-list">
         <h3 class="text-header">Search for Star Wars character</h3>
