More than one character case

--- a/index.html
+++ b/index.html
@@ -31,5 +31,8 @@
       <h3>Species</h3>
       <p id="species"></p>
     </div>
+    <div id="resultsForMoreThanOneCharacter">
+
+    </div>
   </body>
 </html>
