try on creating div for names with flex styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="js.js" defer></script>
+    <link rel="stylesheet" href="style.css">
     <title>SWAPI</title>
   </head>
   <body>
@@ -22,8 +23,8 @@
       </div>
     </div>
     <div class="result-container" id="result">
-      <h3>Name</h3>
-      <p id="characterName"></p>
+      <div id="multipleNames"><h3>Name</h3>
+        <p id="characterName"></p></div>
       <h3>Homeworld</h3>
       <p id="homeworld"></p>
       <h3>Movies</h3>
