function for mutiple characters "homeworld"

--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
       </div>
     </div>
     <div class="result-container" id="result">
-      <div id="multipleNames"><h3>Name</h3>
-        <p id="characterName"></p></div>
-      <h3>Homeworld</h3>
-      <p id="homeworld"></p>
+      <div id="multipleNames"></div>
+      <div id="multipleHomeworld"></div>
       <h3>Movies</h3>
       <p id="movies"></p>
       <h3>Species</h3>
