working on getMovies

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     <div class="result-container" id="result">
       <div id="multipleNames"></div>
       <div id="multipleHomeworld"></div>
-      <h3>Movies</h3>
-      <p id="movies"></p>
+      <div id="multipleMovies"></div>
       <h3>Species</h3>
       <p id="species"></p>
     </div>
