style and eventL. on "enter"

--- a/index.html
+++ b/index.html
@@ -12,12 +12,26 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/b433241389.js"
+      crossorigin="anonymous"
+    ></script>
     <title>SWAPI</title>
   </head>
   <body>
     <header class="header">
-      <img src="/death-star.png" alt="SWAPI Logo" class="logo">
+      <img src="/death-star.png" alt="SWAPI Logo" class="logo" />
       <a href="https://swapi.dev/" class="swapiLink">Get SWAPI</a>
+      <div class="menu-container">
+        <div class="menu">
+          <a href="https://github.com/NataliaJeszke">
+            <i class="fa-brands fa-github fa-2xl"></i
+          ></a>
+          <a href="https://github.com/NataliaJeszke" class="githubLink"
+            >Visit my GitHub</a
+          >
+        </div>
+      </div>
     </header>
     <div class="search-container">
       <div class="bannerText">
