--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
   <body>
     <header class="header">
       <img src="/death-star.png" alt="SWAPI Logo" class="logo" />
-      <a href="https://swapi.dev/" class="swapiLink">Get SWAPI</a>
+      <a href="https://swapi.dev/" class="swapiLink" target="_blank" rel="noopener noreferrer">Get SWAPI</a>
       <div class="menu-container">
         <div class="menu">
-          <a href="https://github.com/NataliaJeszke">
+          <a href="https://github.com/NataliaJeszke" target="_blank" rel="noopener noreferrer">
             <i class="fa-brands fa-github fa-2xl"></i
           ></a>
-          <a href="https://github.com/NataliaJeszke" class="githubLink"
+          <a href="https://github.com/NataliaJeszke" class="githubLink" target="_blank" rel="noopener noreferrer"
             >Visit my GitHub</a
           >
         </div>
