scr for logo and search button changed

--- a/index.html
+++ b/index.html
@@ -20,14 +20,28 @@
   </head>
   <body>
     <header class="header">
-      <img src="/death-star.png" alt="SWAPI Logo" class="logo" />
-      <a href="https://swapi.dev/" class="swapiLink" target="_blank" rel="noopener noreferrer">Get SWAPI</a>
+      <img src="death-star.png" alt="SWAPI Logo" class="logo" />
+      <a
+        href="https://swapi.dev/"
+        class="swapiLink"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Get SWAPI</a
+      >
       <div class="menu-container">
         <div class="menu">
-          <a href="https://github.com/NataliaJeszke" target="_blank" rel="noopener noreferrer">
+          <a
+            href="https://github.com/NataliaJeszke"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <i class="fa-brands fa-github fa-2xl"></i
           ></a>
-          <a href="https://github.com/NataliaJeszke" class="githubLink" target="_blank" rel="noopener noreferrer"
+          <a
+            href="https://github.com/NataliaJeszke"
+            class="githubLink"
+            target="_blank"
+            rel="noopener noreferrer"
             >Visit my GitHub</a
           >
         </div>
@@ -49,7 +63,7 @@
           id="search-box"
         />
         <button id="submit" type="submit" value="Submit">
-          <img src="/search.png" alt="button" />
+          <img src="search.png" alt="button" />
         </button>
       </div>
     </div>
